[package]
name = "cast-schedule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_cast = "0.18.1"
rayon = "1.7.0"
mdns = "3.0.0"
local-ip-address = "0.5.4"
futures-core = "0.3.28"
parallel-stream = "2.1.3"
futures-util = "0.3.28"
async-std = "1.12.0"
regex = "*"
once_cell = "1.18.0"
google-calendar = "0.7.0"
chrono = "0.4.28"
draw = "0.3.0"
